tests/trust/trust.exp
Error --------------------------------------------------------------------------------------------------- basic.js:30:27

Cannot assign `d` to `e` because explicit 'any' [1] is incompatible with trusted number [2]. [incompatible-trust]

   basic.js:30:27
   30| var e: $Trusted<number> = d; // fail
                                 ^

References:
   basic.js:29:16
   29| d = 'Hello' as any; // ok
                      ^^^ [1]
   basic.js:30:8
   30| var e: $Trusted<number> = d; // fail
              ^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- errmsg.js:4:20

Cannot assign `42` to `b` because private number [1] is incompatible with explicit 'any' [2]. [incompatible-trust]

   errmsg.js:4:20
   4| var b: any = 42 as $Private<number>;
                         ^^^^^^^^^^^^^^^^ [1]

References:
   errmsg.js:4:8
   4| var b: any = 42 as $Private<number>;
             ^^^ [2]


Error ------------------------------------------------------------------------------------------- function_types.js:6:26

Cannot assign `a` to `b` because explicit 'any' [1] is incompatible with trusted number [2] in the first parameter.
[incompatible-trust]

   function_types.js:6:26
   6| var b: (any => number) = a; //fail
                               ^

References:
   function_types.js:6:9
   6| var b: (any => number) = a; //fail
              ^^^ [1]
   function_types.js:5:9
   5| var a: ($Trusted<number> => number) = f;
              ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- function_types.js:9:14

Cannot assign `a` to `e` because explicit 'any' [1] is incompatible with trusted number [2]. [incompatible-trust]

   function_types.js:9:14
   9| var e: any = a; //fail
                   ^

References:
   function_types.js:9:8
   9| var e: any = a; //fail
             ^^^ [1]
   function_types.js:5:9
   5| var a: ($Trusted<number> => number) = f;
              ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ function_types.js:10:49

Cannot assign `a` to `h` because `any` may have been passed into number [1] and `any` is incompatible with trusted
number [2] in the return value. [incompatible-trust]

   function_types.js:10:49
   10| var h: ($Trusted<number> => $Trusted<number>) = a; //fails with inference
                                                       ^

References:
   function_types.js:5:29
    5| var a: ($Trusted<number> => number) = f;
                                   ^^^^^^ [1]
   function_types.js:10:29
   10| var h: ($Trusted<number> => $Trusted<number>) = a; //fails with inference
                                   ^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- syntax.js:5:16

Not a valid type to mark as `$Trusted`. [invalid-trusted-type-arg]

   5| declare var y: $Trusted<any>;
                     ^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- syntax.js:7:16

Not a valid type to mark as `$Trusted`. [invalid-trusted-type-arg]

   7| declare var z: $Trusted<T>;
                     ^^^^^^^^^^^



Found 7 errors
